#pragma once

enum PaymentStatus {
    SUCCESS,
    FAILED
};
