#pragma once

enum SeatCategory {
    SILVER,
    GOLD,
    PLATINUM
};
