#pragma once

enum SeatStatus {
    AVAILABLE,
    LOCKED,
    BOOKED
};
